syntax = "proto2";

package account;

option go_package = "github.com/subiz/header/account";

import "common.proto";
import "payment.proto";

message DashboardAgent {
	optional int64 tour_guide_web_showed = 6;
	optional int64 tour_guide_getting_started_web_showed = 10;
	optional int64 tour_guide_channel_installing_web_showed = 11;
	optional int64 bot_build_showed = 12;
	repeated string pinned_user_views = 13; // list of agents that pinned this view
	repeated string user_view_display_fields = 14;
	repeated string user_view_order_by = 15; // +attr:fullname, -attr:email
}

message Agent {
	optional common.Context ctx = 1;
	optional string id = 2;
	optional string account_id = 3; // subiz only

	optional string fullname = 4;
	optional string email = 5;
	repeated string emails = 6;
	repeated string phones = 7;
	optional string phone = 8;
	optional bool is_owner = 10;
	optional string job_title = 11;

	enum Gender {
		unset = 0;
		male = 1;
		female = 2;
		bisexual = 3;
		asexual = 4;
	}

	optional string gender = 12;
	optional string avatar_url = 13;
	optional string lang = 14;
	optional string location = 15;
	optional string timezone = 16;
	optional string encrypted_password = 17;
	optional int64 joined = 20;
	optional string invited_by = 21;

	enum AgentState {
		pending = 0; // waiting for invitation response
		active = 1;
		inactive = 2;
		deleted = 3;
	}

	optional string state = 22; //Agent state
	optional int64 password_changed = 23;
	optional int64 seen = 24;
	optional int64 modified = 25;

	// optional auth.Method method = 27;
	optional Account account = 28;
	optional string country_code = 29;

	// optional common.Permission perm = 31;

	optional int64 last_login = 32;

	optional string type = 33; // bot or agent (default is agent)
	optional string client_id = 34; // ID of bot

	optional bool is_supervisor = 35;
	optional int64 last_ping = 36;

	optional int64 last_token_requested = 37;
	optional Presence last_seen = 38;

	optional DashboardAgent dashboard_setting = 40;
	repeated string scopes = 41;
}

message AgentGroup {
	optional common.Context ctx = 1;
	optional string id = 2;
	optional string account_id = 3;
	optional string name = 4;
	optional string logo_url = 5;

	// members is list of 10 agents in group
	repeated Agent members = 7;
	optional int64 created = 6;
	optional int64 modified = 8;
}

message ResetPasswordRequest {
	optional common.Context ctx = 1;
	optional string email = 2;
}

message Account {
	optional common.Context ctx = 1;
	optional string id = 2;
	optional string name = 3;
	optional string logo_url = 5;
	optional string owner_id = 6;
	optional string state = 7; // accountstate
	optional int64 created = 8;
	optional int64 confirmed = 9;
	optional int64 modified = 10;
	optional string slogan = 12;

	//optional string referrer_id = 11;
	enum State {
		activated = 1;  // normal account
		deleted = 3; // haven't refreshed token in the last 90 days
		inactive = 4; // haven't refreshed token in the last 60 days
		banned = 5;
	}
	optional string city = 14;
	optional int32 zip_code = 16;
	optional string tax_id = 17;
	optional string facebook = 18;
	optional string twitter = 22;
	optional string phone = 19;
	optional string address = 20;
	optional string url = 21;
	optional string lang = 23;
	//optional string referer_from = 24;
	optional string timezone = 26;
	optional payment.Limit limit = 25;
	optional string country = 27;

	optional string date_format = 29;
	optional BusinessHours business_hours = 30;
	optional string referrer_from = 31;

	optional int64 last_token_requested = 32;  // todo: remove

	optional LeadSetting lead_setting = 33;
	repeated string web_domains = 34;

	optional Feature feature = 35;
	optional Feature force_feature = 36; // only edit by subiz
	optional WebpageMonitorSetting webpage_monitor_setting = 37;

	optional string locale = 39; // primary locale
	repeated string supported_locales = 40; // default vi-VN and en-US
}

message Feature {
	optional bool webpage_monitor = 3;
	optional bool webpage_audit = 4;
	optional bool facebook = 5;
	optional bool zalo = 6;
	optional bool email = 7;
	optional bool web_plugin = 8;
	optional bool bot = 9;
}

message WebpageMonitorSetting {
	optional bool weekly_report = 2;
}

message LeadSetting {
	optional string assign_conversation_as_lead = 3; // assigned [default], joined, none
}

message GroupMember {
	optional common.Context ctx = 1;
	optional string account_id = 2;
	optional string group_id = 3;
	optional string agent_id = 4;
}

message CreateAccountRequest {
	optional common.Context ctx = 1;
	optional string fullname = 2;
	optional string email = 3;
	optional string lang = 4;
	optional string password = 5;
	optional string account_name = 6;
	optional string account_url = 7;
	optional string avatar_url = 8;
	optional string timezone = 9;
	optional string phone = 10;
	optional string country_code = 11;
	optional string referrer_from = 12;
	optional string ga_client_id = 13;
}

message Agents {
	optional common.Context ctx = 1;
	repeated Agent Agents = 2;
}

message NewPassword {
	optional common.Context ctx = 1;
	optional string token = 2;
	optional string new_password = 3;
	optional string old_password = 5;
	optional string email = 8;
}

message AgentGroups {
	optional common.Context ctx = 1;
	repeated AgentGroup Groups = 2;
}

message Token {
	optional common.Context ctx = 1;
	optional bool is_set = 2; // true
	optional string token = 3;
	optional string account_id = 4;
}

message WarnInactiveEmail {
	optional common.Context ctx = 1;
	optional string from = 8;
	optional string to = 2;
	optional string account_id = 3;
	optional string owner_id = 4;
	optional string owner_name = 7;
	optional string owner_email = 9;
	optional int64 inactive_date = 10; // in ms
}

message InvoiceEmail {
	optional common.Context ctx = 1;
	optional string account_id = 2;
	optional int64 created = 6; // sec
	repeated string invoice_ids = 8;
	repeated string invoice_urls = 9;
	repeated int32 overdue_days = 10;
}

message SubscriptionUpgradedEmail {
	optional common.Context ctx = 1;
	optional string account_id = 2;
	optional int64 created = 6; // sec
}

message BillCreatedEmail {
	optional common.Context ctx = 1;
	optional string account_id = 2;
	optional int64 created = 6; // sec
	repeated string invoice_ids = 8;
	repeated string invoice_urls = 9;
}

message TrialEndingEmail {
	optional common.Context ctx = 1;
	optional string account_id = 2;
	optional int64 created = 6; // sec
	optional int64 ended = 7;
}

message DowngradedToFreeEmail {
	optional common.Context ctx = 1;
	optional string account_id = 2;
	optional int64 created = 6; // sec
}

message InviteEmail {
	optional common.Context ctx = 1;
	optional string to = 2;
	optional string account_id = 3;
	optional string sender_id = 4;
	optional int64 expired_in = 5;
	optional string token = 6;

	optional string fullname = 9;
	optional string sender_name = 10;
	optional string account_name = 11;
	optional string account_logo_url = 12;
	optional string from = 14;
}

message ResetPasswordEmail {
	optional common.Context ctx = 1;
	optional string from = 2;
	optional string to = 3;
	// ExpiredIn is a RFC3339 time string indicates when token will be expired
	optional int64 expired_in = 4;
	optional string token = 5;
	optional string account_id = 6;
	optional string agent_id = 7;
	optional string agent_name = 8;
}

message BusinessHours {
	optional common.Context ctx = 1;
	optional string account_id = 2;
	optional string id = 3;

	message WorkingDay {
		optional string weekday = 1;
		optional string start_time = 2;
		optional string end_time = 3;
	}
	repeated WorkingDay working_days = 4;

	message Holiday {
		optional int32 year = 1;
		optional int32 month = 2;
		optional int32 day = 3;
		optional string weekday = 4; // deprecated
		optional string name = 5;
		optional string start_time = 6;
		optional string end_time = 7;
	}
	repeated Holiday holidays = 5;
}

message SyncPublicHolidaysRequest {
	optional common.Context ctx = 1;
	optional string country_code = 2;
	optional string lang = 3;
}

message AccSub {
	optional string id = 2;
	optional Account account = 3;
	optional payment.Subscription subscription = 4;
	repeated Agent agents = 5;
	optional string stringify = 6;
}

message AccSubs {
	repeated AccSub accsub = 2;
	optional string anchor = 4;
}

message SearchSubRequest {
	optional common.Context ctx = 1;
	optional string query = 4;
	optional string anchor = 5;
	optional int32 limit = 6;
	optional string plan = 7;
	// optional uint32 billing_cycle_month = 8;
	optional string order_by = 10;
}

message Presences {
	optional common.Context ctx = 1;
	optional string account_id = 2;
	repeated Presence presences = 4;
}

message Presence {
	optional common.Context ctx = 1;
	optional string account_id = 3;
	optional string user_id = 4;
	optional int64 pinged = 5;
	optional int64 pinged_minute = 6;

	optional string ip = 7;
	optional string ua = 8;

	optional bool is_focused = 9; // tell where the user is actually seeing the page
}