syntax = "proto3";

package header;

option go_package = "github.com/subiz/header";

import "common.proto";

message Credit {
	common.Context ctx = 1;
	string account_id = 2;
	string id = 3;

	string name = 4;
	int64 balance_fpv = 5; // fpv

	int64 credit_limit_fpv = 7; // 0 - 40 only set by subiz
	int64 tax_fpv = 8; // 1000 -> 10%

	int64 created = 9;
	string created_by = 10;

	int64 updated = 11;
	string updated_by = 12;
}

message CreditSnapshoot {
	common.Context ctx = 1;
	string account_id = 2;
	string credit_id = 3;

	int64 unix_hour = 4;

	int64 balance_fpv = 6;

	int64 max_rule_usage = 10;
	// Free tier remain
	int64 rules = 20; // per month
}

message CreditSpendEntry {
	common.Context ctx = 1;
	string account_id = 2;
	string id = 3;
	int64 created = 4;
	string service = 5; // remove file (sub-category)
	string category = 6; // agent, zalo_zns, zalo_active_message, image

	int64 quantity = 7;
	CreditSendEntryData data = 8;
	string credit_id = 9;

	int64 fpv_unit_price = 10;

	string service_id = 12; // cp4348934
	string service_type = 13; // campaign, bot, popup

	string item = 14;
	string item_id = 15;
}

message CreditSendEntryDataId {
	string id = 2;
}

message CreditSendEntryDataAgent {
	int64 total_agents = 1;
	repeated string agents = 2;
}

message CreditSendEntryDataEmail {
	string from = 3;
	string to = 4;
	string email_id = 5;
}

message CreditSendEntryDataZaloZNS {
	string oa_id = 3;
	string message_id = 4; // from zalo
	string template_id = 5;
	string phone_number = 6;
}

message CreditSendEntryDataZaloActiveMessage {
	string oa_id = 3;
	string message_id = 4; // from zalo
	string conversation_id = 5;
	string event_id = 6;
	string zalo_user_id = 7;
}

message CreditSendEntryData {
	CreditSendEntryDataAgent agent = 2;
	CreditSendEntryDataZaloZNS zalo_zns = 3;
	CreditSendEntryDataZaloActiveMessage zalo_active_message = 4;
	CreditSendEntryDataEmail email = 5;
	CreditSendEntryDataId file = 6;
}

message CreditSpendReportRequest {
	common.Context ctx = 1;
	string account_id = 2;
	string credit_id = 3;
	int64 from_time = 4; // ms
	string unit = 5; // hour, day, month
	string service = 6; // just filter
	string service_id = 7;
	int64 limit = 8; // default: 24, 30, 24
}

message CreditSpendLogRequest {
	common.Context ctx = 1;
	string account_id = 2;
	int64 created_from = 4; // ms
	string service = 6; // just filter
	string category = 7; // just filter
	string service_id = 8; // filter by source

	int64 limit = 10; // max : 20
}

message CreditSpendEntries {
	common.Context ctx = 1;
	string account_id = 2;
	repeated CreditSpendEntry entries = 4;
}

message TrySpendCreditResponse {
	common.Context ctx = 1;
	string account_id = 2;
	string credit_id = 3;

	string service_id = 4;

	int64 total_spend_fpv = 5;
	int64 balance_fpv = 6;

	bool allow = 7;
}

message CreditSpendReportResponseData {
	string item_id = 3;
	repeated int64 data = 4; // by time
}

message CreditSpendReportResponse {
	common.Context ctx = 1;
	string account_id = 2;
	string credit_id = 3;
	repeated CreditSpendReportResponseData datas = 4;
}
