// CODE GENERATED BY lang.js. DO NOT MODIFY
syntax = "proto3";

package header;

option go_package = "github.com/subiz/header";

message I18nString {
	string af_NA = 11; // Afrikaans (Namibia)
	string af_ZA = 12; // Afrikaans (South Africa)
	string ar_AR = 13; // Arabic
	string ar_MA = 14; // Arabic (Morocco)
	string ar_SA = 15; // Arabic (Saudi Arabia)
	string ay_BO = 16; // Aymara
	string az_AZ = 17; // Azerbaijani
	string be_BY = 18; // Belarusian
	string bg_BG = 19; // Bulgarian
	string bn_IN = 20; // Bengali (India)
	string bn_BD = 21; // Bengali (Bangladesh)
	string bs_BA = 22; // Bosnian
	string ca_ES = 23; // Catalan
	string ck_US = 24; // Cherokee
	string cs_CZ = 25; // Czech
	string cy_GB = 26; // Welsh
	string da_DK = 27; // Danish
	string de_AT = 28; // German (Austria)
	string de_DE = 29; // German (Germany)
	string de_CH = 30; // German (Switzerland)
	string el_GR = 31; // Greek (Greece)
	string en_GB = 32; // English (UK)
	string en_AU = 33; // English (Australia)
	string en_CA = 34; // English (Canada)
	string en_IE = 35; // English (Ireland)
	string en_IN = 36; // English (India)
	string en_PI = 37; // English (Pirate)
	string en_UD = 38; // English (Upside Down)
	string en_US = 39; // English (US)
	string en_ZA = 40; // English (South Africa)
	string eo_EO = 41; // Esperanto
	string es_AR = 42; // Spanish (Argentina)
	string es_419 = 43; // Spanish (Latin America)
	string es_CL = 44; // Spanish (Chile)
	string es_CO = 45; // Spanish (Colombia)
	string es_EC = 46; // Spanish (Ecuador)
	string es_ES = 47; // Spanish (Spain)
	string es_LA = 48; // Spanish (Latin America)
	string es_NI = 49; // Spanish (Nicaragua)
	string es_MX = 50; // Spanish (Mexico)
	string es_US = 51; // Spanish (United States)
	string es_VE = 52; // Spanish (Venezuela)
	string et_EE = 53; // Estonian (Estonia)
	string eu_ES = 54; // Basque
	string fa_IR = 55; // Persian
	string fb_LT = 56; // Leet
	string fi_FI = 57; // Finnish
	string fo_FO = 58; // Faroese
	string fr_CA = 59; // French (Canada)
	string fr_FR = 60; // French (France)
	string fr_BE = 61; // French (Belgium)
	string fr_CH = 62; // French (Switzerland)
	string fy_NL = 63; // Frisian (West)
	string ga_IE = 64; // Irish (Gaelic)
	string gl_ES = 65; // Galician
	string gn_PY = 66; // Guarani
	string gu_IN = 67; // Gujarati
	string gx_GR = 68; // Classical Greek
	string he_IL = 69; // Hebrew
	string hi_IN = 70; // Hindi
	string hr_HR = 71; // Croatian
	string hu_HU = 72; // Hungarian
	string hy_AM = 73; // Armenian
	string id_ID = 74; // Indonesian
	string is_IS = 75; // Icelandic (Iceland)
	string it_IT = 76; // Italian
	string ja_JP = 77; // Japanese
	string jv_ID = 78; // Javanese
	string ka_GE = 79; // Georgian
	string kk_KZ = 80; // Kazakh
	string km_KH = 81; // Khmer
	string kn_IN = 82; // Kannada (India)
	string ko_KR = 83; // Korean (Korea)
	string ku_TR = 84; // Kurdish
	string la_VA = 85; // Latin
	string li_NL = 86; // Limburgish
	string lt_LT = 87; // Lithuanian
	string lv_LV = 88; // Latvian
	string mg_MG = 89; // Malagasy
	string mk_MK = 90; // Macedonian (Macedonian)
	string ml_IN = 91; // Malayalam
	string mn_MN = 92; // Mongolian
	string mr_IN = 93; // Marathi
	string ms_MY = 94; // Malay
	string mt_MT = 95; // Maltese
	string nb_NO = 96; // Norwegian (bokmal)
	string ne_NP = 97; // Nepali
	string nl_BE = 98; // Dutch (Belgium)
	string nl_NL = 99; // Dutch (Netherlands)
	string nn_NO = 100; // Norwegian (nynorsk)
	string or_IN = 101; // Oriya
	string pa_IN = 102; // Punjabi (India)
	string pl_PL = 103; // Polish
	string ps_AF = 104; // Pashto
	string pt_BR = 105; // Portuguese (Brazil)
	string pt_PT = 106; // Portuguese (Portugal)
	string qu_PE = 107; // Quechua
	string rm_CH = 108; // Romansh
	string ro_RO = 109; // Romanian
	string ru_RU = 110; // Russian
	string sa_IN = 111; // Sanskrit
	string se_NO = 112; // Northern SÃ¡mi
	string si_LK = 113; // Sinhala (Sri Lanka)
	string sk_SK = 114; // Slovak (Slovakia)
	string sl_SI = 115; // Slovenian
	string so_SO = 116; // Somali
	string sq_AL = 117; // Albanian
	string sr_RS = 118; // Serbian (Serbia)
	string sv_SE = 119; // Swedish
	string sw_KE = 120; // Swahili (Kenya)
	string ta_IN = 121; // Tamil
	string te_IN = 122; // Telugu
	string tg_TJ = 123; // Tajik
	string th_TH = 124; // Thai (Thailand)
	string tl_PH = 125; // Filipino
	string tr_TR = 126; // Turkish
	string tt_RU = 127; // Tatar
	string uk_UA = 128; // Ukrainian
	string ur_PK = 129; // Urdu
	string uz_UZ = 130; // Uzbek
	string vi_VN = 131; // Vietnamese
	string xh_ZA = 132; // Xhosa
	string yi_DE = 133; // Yiddish (German)
	string zh_Hans = 134; // Chinese Simplified
	string zh_Hant = 135; // Chinese Traditional
	string zh_CN = 136; // Chinese Simplified (China)
	string zh_HK = 137; // Chinese Traditional (Hong Kong)
	string zh_SG = 138; // Chinese Simplified (Singapore)
	string zh_TW = 139; // Chinese Traditional (Taiwan)
	string zu_ZA = 140; // Zulu
	string custom = 250;
  string key = 251;
}
message Price {
	string currency = 2;
	int64 FPV = 3; // fixed point arithmetic value, see https://en.wikipedia.org/wiki/Fixed-point_arithmetic

	float AFN = 10;
	float EUR = 11;
	float ALL = 12;
	float DZD = 13;
	float USD = 14;
	float AOA = 15;
	float XCD = 16;
	float ARS = 17;
	float AMD = 18;
	float AWG = 19;
	float AUD = 20;
	float AZN = 21;
	float BSD = 22;
	float BHD = 23;
	float BDT = 24;
	float BBD = 25;
	float BYN = 26;
	float BZD = 27;
	float XOF = 28;
	float BMD = 29;
	float INR = 30;
	float BTN = 31;
	float BOB = 32;
	float BOV = 33;
	float BAM = 34;
	float BWP = 35;
	float NOK = 36;
	float BRL = 37;
	float BND = 38;
	float BGN = 39;
	float BIF = 40;
	float CVE = 41;
	float KHR = 42;
	float XAF = 43;
	float CAD = 44;
	float KYD = 45;
	float CLP = 46;
	float CLF = 47;
	float CNY = 48;
	float COP = 49;
	float COU = 50;
	float KMF = 51;
	float CDF = 52;
	float NZD = 53;
	float CRC = 54;
	float HRK = 55;
	float CUP = 56;
	float CUC = 57;
	float ANG = 58;
	float CZK = 59;
	float DKK = 60;
	float DJF = 61;
	float DOP = 62;
	float EGP = 63;
	float SVC = 64;
	float ERN = 65;
	float SZL = 66;
	float ETB = 67;
	float FKP = 68;
	float FJD = 69;
	float XPF = 70;
	float GMD = 71;
	float GEL = 72;
	float GHS = 73;
	float GIP = 74;
	float GTQ = 75;
	float GBP = 76;
	float GNF = 77;
	float GYD = 78;
	float HTG = 79;
	float HNL = 80;
	float HKD = 81;
	float HUF = 82;
	float ISK = 83;
	float IDR = 84;
	float XDR = 85;
	float IRR = 86;
	float IQD = 87;
	float ILS = 88;
	float JMD = 89;
	float JPY = 90;
	float JOD = 91;
	float KZT = 92;
	float KES = 93;
	float KPW = 94;
	float KRW = 95;
	float KWD = 96;
	float KGS = 97;
	float LAK = 98;
	float LBP = 99;
	float LSL = 100;
	float ZAR = 101;
	float LRD = 102;
	float LYD = 103;
	float CHF = 104;
	float MOP = 105;
	float MKD = 106;
	float MGA = 107;
	float MWK = 108;
	float MYR = 109;
	float MVR = 110;
	float MRU = 111;
	float MUR = 112;
	float XUA = 113;
	float MXN = 114;
	float MXV = 115;
	float MDL = 116;
	float MNT = 117;
	float MAD = 118;
	float MZN = 119;
	float MMK = 120;
	float NAD = 121;
	float NPR = 122;
	float NIO = 123;
	float NGN = 124;
	float OMR = 125;
	float PKR = 126;
	float PAB = 127;
	float PGK = 128;
	float PYG = 129;
	float PEN = 130;
	float PHP = 131;
	float PLN = 132;
	float QAR = 133;
	float RON = 134;
	float RUB = 135;
	float RWF = 136;
	float SHP = 137;
	float WST = 138;
	float STN = 139;
	float SAR = 140;
	float RSD = 141;
	float SCR = 142;
	float SLL = 143;
	float SGD = 144;
	float XSU = 145;
	float SBD = 146;
	float SOS = 147;
	float SSP = 148;
	float LKR = 149;
	float SDG = 150;
	float SRD = 151;
	float SEK = 152;
	float CHE = 153;
	float CHW = 154;
	float SYP = 155;
	float TWD = 156;
	float TJS = 157;
	float TZS = 158;
	float THB = 159;
	float TOP = 160;
	float TTD = 161;
	float TND = 162;
	float TRY = 163;
	float TMT = 164;
	float UGX = 165;
	float UAH = 166;
	float AED = 167;
	float USN = 168;
	float UYU = 169;
	float UYI = 170;
	float UYW = 171;
	float UZS = 172;
	float VUV = 173;
	float VES = 174;
	float VED = 175;
	float VND = 176;
	float YER = 177;
	float ZMW = 178;
	float ZWL = 179;
	float XBA = 180;
	float XBB = 181;
	float XBC = 182;
	float XBD = 183;
	float XTS = 184;
	float XXX = 185;
	float XAU = 186;
	float XPD = 187;
	float XPT = 188;
	float XAG = 189;
}
