syntax = "proto3";

package header;

option go_package = "github.com/subiz/header";

message TextTransform {
	string name = 2; // trim, lower_case, upper_case
}

message FloatTransform {
	string name = 2; // round, ceil, floor
}

message TextCondition {
	string op = 2;
	repeated TextTransform transforms = 3;

	bool has_value = 4; // true or false
	bool empty = 5; // true or false

	repeated string eq = 6;
	repeated string neq = 7;
	repeated string start_with = 8;
	repeated string end_with = 9;
	repeated string contain = 10;
	string regex = 12;

	repeated string not_contain = 13;
	repeated string not_start_with = 15;
	repeated string not_end_with = 16;

	repeated string contain_all = 18;

	string case_sensitive = 30;
	string accent_sensitive = 31;
}

message BoolCondition {
	string op = 2; // has_value, true, false
}

message FloatCondition {
	string op = 2;
	repeated FloatTransform transforms = 3;
	bool has_value = 4;
  double gt = 5;
  double gte = 6;
	double lt = 7;
	double lte = 8;
	repeated double in = 9;
	double eq = 10;
	double neq = 11;
	repeated double not_in = 12;
	repeated double in_range = 13;
	repeated double not_in_range = 14;
}

message DateCondition {
	string op = 2; // in_business_hour, non_business_hour, relative, today, yesterday, last_week, this_week, last_month, this_month, last, before_ago
	// repeated FloatTransform transforms = 3;
	// repeated int64 hour_of_day
	// bool in_business_hour = 9;
	// bool non_business_hour = 10;
	repeated string days_of_week = 10; // monday
	int64 after = 11;
	int64 before = 12;
	repeated int64 between = 13;
	repeated int64 outsite = 14;

	// relative, minute
	int64 last = 17; // 1440 => last 24h sec
	int64 before_ago = 18; // 365*86400 sec
}